Search Icon alignment fixed

--- a/src/SearchBox.module.css
+++ b/src/SearchBox.module.css
@@ -19,7 +19,7 @@
     margin:0;
     outline:none;
     border:1px solid #a1a1a1;
-    text-align: left;
+    text-align: center;
 }
 
 
